虚拟机环境配置，用于虚拟机环境下运行（修改nginx相关ip、request.js中ip）